Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -11,11 +11,15 @@
 
 \title{Initial spatial conditions in simulation models: the missing leg of sensitivity analyses?}
 
-\author{Cl{\' e}mentine Cottineau\affilnum{1}, Juste Raimbault\affilnum{2,4}, Marion Le Texier\affilnum{3}, Florent Le N{\' e}chet\affilnum{4}, Romain Reuillon\affilnum{2,5}
+\author{Juste Raimbault\affilnum{1,4}, 
+Cl{\' e}mentine Cottineau\affilnum{2},
+Marion Le Texier\affilnum{3}, 
+Florent Le N{\' e}chet\affilnum{4}, 
+Romain Reuillon\affilnum{1,5}
 }
 
-\affiliation{\affilnum{1}Centre for Advanced Spatial Analysis, University College London, UK\\
-\affilnum{2}UMR 8504 G{\'e}ographie-cit{\'e}s, Paris, France\\
+\affiliation{\affilnum{1}UMR 8504 G{\'e}ographie-cit{\'e}s, Paris, France\\
+\affilnum{2}Centre for Advanced Spatial Analysis, University College London, UK\\
 \affilnum{3}UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France\\
 \affilnum{4}Laboratoire Ville Mobilit{\'e} Transport, Universit{\'e} Paris-Est, France\\
 \affilnum{5}Institut des Syst{\`e}mes Complexes Paris Ile-de-France, France}
@@ -47,7 +51,7 @@ Although simulation models of geographical systems in general and agent-based mo
 \section{Introduction}
 %%%%%%%%%%%%%%%%%%%%%%
 
-Simulation has been recognised and increasingly used by geographers to explore various geographical processes and problems within virtual laboratories. It appears as a very fruitful way to overcome the difficulty of analytic resolution of many spatial models developed in the past, and to explore the possible trajectories of social and ecological systems in space and time. The specificity of geographical models compared with models from other social sciences is usually regarded as the way geographers consider space and spatial interactions, driven by an explicit interest in the way space influences the outcomes of the model. Geographers are indeed concerned about understanding and modelling how space plays a role in social interactions and environmental processes, and whether its action is placed-based or place-neutral. We think simulation can become a very good tool to achieve this, provided that models include relevant spatial description and modelling, behavioural rules that take space into account, and provided model evaluation  stresses the sensitivity of output variations to the way space is modelled. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of model's outcomes to initial spatial conditions.
+Simulation has been recognised and increasingly used by geographers to explore various geographical processes and problems within virtual laboratories. It appears as a very fruitful way to overcome the difficulty of analytic resolution of many spatial models developed in the past, and to explore the possible trajectories of social and ecological systems in space and time. The specificity of geographical models compared with models from other social sciences is usually regarded as the way geographers consider space and spatial interactions, driven by an explicit interest in the way space influences the outcomes of the model. Geographers are indeed concerned about understanding and modelling how space plays a role in social interactions and environmental processes, and whether its action is placed-based or place-neutral. We think simulation can become a very good tool to achieve this, provided that models include relevant spatial description and modelling, behavioural rules that take space into account, and provided model evaluation stresses the sensitivity of output variations to the way space is modelled. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of model's outcomes to initial spatial conditions. To demonstrate the genericity of our approach, we develop two applications from simulation models which are commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996}: Schelling's model of segregation and Epstein and Axtell's Sugarscape model. Both models are defined at the intraurban level.
 
 
 %%%%%%%%%%%%%%%%%%%%%%
@@ -60,7 +64,10 @@ Although this may seem obvious, cities are not regular grids of isotropic densit
 We expect spatial patterns to influence model outcomes also because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled.
 
 \paragraph{Due to spatio-temporal path dependencies}
-A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what \todo{cit Quarck and Jaguar} calls \emph{frozen accidents} in any complex system, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system: the example of transportation networks is a good illustration, as their spatial shape and hierarchy is strongly influenced by past investment decisions, technical choices, or political decisions sometimes not rational~(\cite{zembri2010new}). Some aggregated indicators will not take into account positions and trajectories of each agent (such as segregation in the Schelling model) but others, as in the case of spatial patterns of accessibility in a system of cities, fully capture the path-dependency and may therefore be highly dependent of the initial spatial configuration. It is not clear for example what shifted the economical and political capital of France from Lyon to Paris in the early Middle Age, some assumptions being the reconfiguration of trade patterns from South to North of Europe and thus an increased centrality for Paris due to its spatial position: the bifurcation induced by socio-economic and political factors took a deep significance with worldwide repercussions until today when magnified by the spatial configuration. \comment[JR]{quelqu'un sait si d'une part c'est vrai et d'autre part si des references backupent ca ? - je sors ca completement du chapeau pour l'instant mais ça me semble intuitivement raisonnable et une bonne illustration.}
+
+A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what \todo{cit Quarck and Jaguar} calls \emph{frozen accidents} in any complex system, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. Temporal and cumulative effects have been considered in various geographical subfields and at various geographical scales, including transportation and urban economics, urban geography, and interregional migrations \citep[for e.g.]{White1977,White1978, AllenSanglier1979,Wilson1981,Pumainetal1989,AllenSanglier1981,WeidlichHaag1988,Portugali2000,Wilson2002,Batty2007,AzizAlaouiBertelle2009}. Less studied is the impact of the spatial setting on models dynamics and potential bifurcations.
+
+The example of transportation networks is a good illustration, as their spatial shape and hierarchy is strongly influenced by past investment decisions, technical choices, or political decisions sometimes not rational~(\cite{zembri2010new}). Some aggregated indicators will not take into account positions and trajectories of each agent (such as segregation in the Schelling model) but others, as in the case of spatial patterns of accessibility in a system of cities, fully capture the path-dependency and may therefore be highly dependent of the initial spatial configuration. It is not clear for example what shifted the economical and political capital of France from Lyon to Paris in the early Middle Age, some assumptions being the reconfiguration of trade patterns from South to North of Europe and thus an increased centrality for Paris due to its spatial position: the bifurcation induced by socio-economic and political factors took a deep significance with worldwide repercussions until today when magnified by the spatial configuration. \comment[JR]{quelqu'un sait si d'une part c'est vrai et d'autre part si des references backupent ca ? - je sors ca completement du chapeau pour l'instant mais ça me semble intuitivement raisonnable et une bonne illustration.} \comment[MLT]{L'idée de donner un exemple me semble bonne mais je ne suis pas sûre qu'on l'amène de la bonne manière?}
 
 
 %%%%%%%%%%%%%%%%%%%%%%
@@ -95,7 +102,7 @@ Recent attempts of running Schelling-like models beyond the chessboard grid have
 %%%%%%%%%%%%%%%%%%%%%%
 
 
-In this section, we detail the method developped to tackle simulation models sensitivity to initial spatial conditions. The general workflow of the method is illustrated in Figure \ref{fig:method}.
+In this section, we detail the method developed to analyse the sensitivity of simulation models to initial spatial conditions. The general method workflow is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch in figure \ref{fig:method}, which consists of running a model $\mu$ with various values of its parameters and relating these variations of values to the variations in the simulation results, we here introduce a spatial generator (lower branch in figure \ref{fig:method}), which itself is determined by parameters and produces sets of spatial initial conditions. Initial spatial conditions are clustered to represent types of spaces ex-ante (for example: moonocentric or polycentric density grids), and the sensitivity analysis of the model is now run against $\mu$ parameters as well as spatial parameters or spatial types. It allows the sensitivity analysis to produce qualitative conclusions regarding the influence of spatial distribution on the outputs of simulation models, alongside the classic variation of parameter values.
 
 
 %%%%%%%%%%%%%%%%%%%%%%
