--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,3 +1,41 @@
+@article{AllenSanglier1979,
+	title = { A dynamic model of growth in a central place system},
+	volume = {11},
+	journal = {Geographical Analysis},
+	author = {Allen, P. and Sanglier, M.},
+	year = {1979},
+	pages = {256-272}
+}
+
+@article{AllenSanglier1981,
+	title = {Urban evolution, self organisation and decision-making},
+	volume = {13},
+	journal = {Environment and Planning},
+	author = {Allen, P. and Sanglier, M.},
+	year = {1981},
+	pages = {168-183}
+}
+
+@article{Axtelletal1996,
+	title = {Aligning simulation models: a Case study and results},
+	volume = {1},
+    number ={2},
+	url = {https://link.springer.com/article/10.1007%2FBF01299065?LI=true},
+	urldate = {2017-07-06},
+	journal = {Computational and Mathematical Organization Theory},
+	author = {Axtell, Robert and Axelrod, Robert and Epstein, Joshua M. and Cohen, Michael D.},
+	year = {1996},
+	pages = {123-141}
+}
+
+@book{AzizAlaouiBertelle2009,
+  title={From System Complexity to Emergent Properties},
+  author={Aziz-Alaoui, M. and Bertelle, C.},
+  year={2009},
+  publisher={Springer},
+  address={Berlin}
+}
+
 @article{Banos2012,
 	title = {Network effects in {Schelling}'s model of segregation: new evidences from agent-based simulation},
 	volume = {39},
@@ -173,6 +211,22 @@
   address={Norwich, UK}
 }
 
+@book{Portugali2000,
+  title={Self-Organization and the City},
+  author={Portugali, J.},
+  year={2000},
+  publisher={Springer-Verlag},
+  address={Berlin}
+}
+
+@book{Pumainetal1989,
+  title={Villes et auto-organisation},
+  author={Pumain D. and Sanders, L. and Saint-Julien, T.},
+  year={1989},
+  publisher={Economica},
+  address={Paris}
+}
+
 @inproceedings{Raimbault2014,
   title={A Hybrid Network/Grid Model of Urban Morphogenesis and Optimization},
   author={Raimbault, Juste and Banos, Arnaud and Doursat, Ren{\'e}},
@@ -251,4 +305,48 @@ URL = {
 eprint = { 
         http://www.tandfonline.com/doi/pdf/10.1080/01441647.2017.1295112
     }
+}
+
+@book{WeidlichHaag1988,
+  title={Interregional Migration},
+  author={Weidlich, W. and Haag, G.},
+  year={1988},
+  publisher={Springer-Verlag},
+  address={Berlin}
+}
+
+@article{White1977,
+	title = {Dynamical central place theory},
+	volume = {9},
+	journal = {Geographical Analysis},
+	author = {White, R.},
+	year = {1977},
+	pages = {226-243}
+}
+
+@article{White1978,
+	title = {The simulation of central place dynamics: Two sector systems and the rank size rule},
+	volume = {10},
+	journal = {Geographical Analysis},
+	author = {White, R.},
+	year = {1978},
+	pages = {201-208}
+}
+
+@book{Wilson1981,
+  title={Catastrophe theory and bifurcation: Application to Urban and Regional System},
+  author={Wilson, A.},
+  year={1981},
+  publisher={Croom Helm},
+  address={London}
+}
+
+@article{Wilson2002,
+	title = {Complex spatial systems: Challenges for modellers},
+	volume = {36},
+	number = {3},
+	journal = {Mathematical and computer modelling},
+	author = {Wilson, A.G.},
+	year = {2002},
+	pages = {379-387}
 }
