--- a/biblio.bib
+++ b/biblio.bib
@@ -39,3 +39,55 @@
   year={1996},
   publisher={Brookings Institution Press}
 }
+
+
+@book{gell1995quark,
+  title={The Quark and the Jaguar: Adventures in the Simple and the Complex},
+  author={Gell-Mann, Murray},
+  year={1995},
+  publisher={Macmillan}
+}
+
+
+@article{rubner2000earth,
+  title={The earth mover's distance as a metric for image retrieval},
+  author={Rubner, Yossi and Tomasi, Carlo and Guibas, Leonidas J},
+  journal={International journal of computer vision},
+  volume={40},
+  number={2},
+  pages={99--121},
+  year={2000},
+  publisher={Springer}
+}
+
+
+@article{visser2006map,
+  title={The map comparison kit},
+  author={Visser, Hans and De Nijs, T},
+  journal={Environmental Modelling \& Software},
+  volume={21},
+  number={3},
+  pages={346--358},
+  year={2006},
+  publisher={Elsevier}
+}
+
+
+@article{10.1371/journal.pone.0178165,
+    author = {Koch, Julian AND Stisen, Simon},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Citizen science: A new perspective to advance spatial pattern evaluation in hydrology},
+    year = {2017},
+    month = {05},
+    volume = {12},
+    url = {https://doi.org/10.1371/journal.pone.0178165},
+    pages = {1-20},
+    abstract = {Citizen science opens new pathways that can complement traditional scientific practice. Intuition and reasoning often make humans more effective than computer algorithms in various realms of problem solving. In particular, a simple visual comparison of spatial patterns is a task where humans are often considered to be more reliable than computer algorithms. However, in practice, science still largely depends on computer based solutions, which inevitably gives benefits such as speed and the possibility to automatize processes. However, the human vision can be harnessed to evaluate the reliability of algorithms which are tailored to quantify similarity in spatial patterns. We established a citizen science project to employ the human perception to rate similarity and dissimilarity between simulated spatial patterns of several scenarios of a hydrological catchment model. In total, the turnout counts more than 2500 volunteers that provided over 43000 classifications of 1095 individual subjects. We investigate the capability of a set of advanced statistical performance metrics to mimic the human perception to distinguish between similarity and dissimilarity. Results suggest that more complex metrics are not necessarily better at emulating the human perception, but clearly provide auxiliary information that is valuable for model diagnostics. The metrics clearly differ in their ability to unambiguously distinguish between similar and dissimilar patterns which is regarded a key feature of a reliable metric. The obtained dataset can provide an insightful benchmark to the community to test novel spatial metrics.},
+    number = {5},
+    doi = {10.1371/journal.pone.0178165}
+}
+
+
+
+
