--- a/biblio.bib
+++ b/biblio.bib
@@ -91,3 +91,42 @@
 
 
 
+@article{le2015forme,
+	Author = {Le N{\'e}chet, Florent},
+	Journal = {Cybergeo: European Journal of Geography},
+	Title = {De la forme urbaine {\`a} la structure m{\'e}tropolitaine: une typologie de la configuration interne des densit{\'e}s pour les principales m{\'e}tropoles europ{\'e}ennes de l'audit urbain},
+	Year = {2015}}
+
+
+
+@misc{openshaw1983data,
+	Author = {Openshaw, S},
+	Title = {FROM DATA CRUNCHING TO MODEL CRUNCHING-THE DAWN OF A NEW ERA},
+	Year = {1983}}
+
+
+
+
+@inproceedings{cottineau2016back,
+	Author = {Cottineau, C and Rey, S and Reuillon, R},
+	Booktitle = {Royal Geographical Society-Annual Conference 2016-Session: Geocomputation, the Next 20 Years (1)},
+	Title = {Back to the Future of Multimodeling},
+	Year = {2016}}
+
+
+
+
+@article{reuillon2013openmole,
+	Author = {Reuillon, Romain and Leclaire, Mathieu and Rey-Coyrehourcq, Sebastien},
+	Journal = {Future Generation Computer Systems},
+	Number = {8},
+	Pages = {1981--1990},
+	Title = {OpenMOLE, a workflow engine specifically tailored for the distributed exploration of simulation models},
+	Volume = {29},
+	Year = {2013}}
+
+
+
+
+
+
