--- a/spacematters.bib
+++ b/spacematters.bib
@@ -183,7 +183,7 @@
 }
 
 @article{LeNechet2015,
-	title = {De la forme urbaine {\` a}  la structure m{\' e}tropolitaine: une typologie de la configuration interne des densit{\' e}s pour les principales m{\' e}ropoles europ{\' e}ennes de l'{Audit} {Urbain}},
+	title = {De la forme urbaine {\` a}  la structure m{\' e}tropolitaine: une typologie de la configuration interne des densit{\' e}s pour les principales m{\' e}ropoles europ{\' e}ennes de l'audit urbain},
 	shorttitle = {De la forme urbaine {\` a}  la structure m{\' e}tropolitaine},
 	url = {http://cybergeo.revues.org/26753},
 	urldate = {2015-04-21},
