--- a/header.tex
+++ b/header.tex
@@ -9,6 +9,8 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \def\volumeyear{2017}
 
 
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 %%%%%
 % variable to include comments or not in the compilation ; set to 1 to include
