Update on Overleaf.

--- a/spacematters.bib
+++ b/spacematters.bib
@@ -227,6 +227,15 @@
   address={Paris}
 }
 
+@article{Quesneletal2009,
+  title={The Virtual Laboratory Environment - An operational framework for multi-modelling, simulation and analysis of complex dynamical systems},
+  author={Quesnel, Gauthier and Duboz, Raphael and Ramat, Eric},
+  journal={Simulation Modelling Practice and Theory},
+  volume={17},
+  pages={641-653},
+  year={2009},
+}
+
 @inproceedings{Raimbault2014,
   title={A Hybrid Network/Grid Model of Urban Morphogenesis and Optimization},
   author={Raimbault, Juste and Banos, Arnaud and Doursat, Ren{\'e}},
@@ -349,4 +358,13 @@ eprint = {
 	author = {Wilson, A.G.},
 	year = {2002},
 	pages = {379-387}
+}
+
+@article{Wu2002,
+	title = {Complexity and Urban Simulation: Towards a Computational Laboratory},
+	volume = {22},
+	journal = {Geography Research Forum},
+	author = {Wu, Fulong},
+	year = {2002},
+	pages = {22-40}
 }
