--- a/paper.tex
+++ b/paper.tex
@@ -6,7 +6,7 @@
 % **************  TITLE AND AUTHOR INFORMATION **************
 
 
-\runninghead{Cottineau \& al.}
+\runninghead{Raimbault \& al.}
 
 
 \title{Initial spatial conditions in simulation models: the missing leg of sensitivity analyses?}
@@ -51,82 +51,59 @@ Although simulation models of geographical systems in general and agent-based mo
 \section{Introduction}
 %%%%%%%%%%%%%%%%%%%%%%
 
-Simulation has been recognised and increasingly used by geographers to explore various geographical processes and problems within virtual laboratories. It appears as a very fruitful way to overcome the difficulty of analytic resolution of many spatial models developed in the past, and to explore the possible trajectories of social and ecological systems in space and time. The specificity of geographical models compared with models from other social sciences is usually regarded as the way geographers consider space and spatial interactions, driven by an explicit interest in the way space influences the outcomes of the model. Geographers are indeed concerned about understanding and modelling how space plays a role in social interactions and environmental processes, and whether its action is placed-based or place-neutral. We think simulation can become a very good tool to achieve this, provided that models include relevant spatial description and modelling, behavioural rules that take space into account, and provided model evaluation stresses the sensitivity of output variations to the way space is modelled. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of model's outcomes to initial spatial conditions. To demonstrate the genericity of our approach, we develop two applications from simulation models which are commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996}: Schelling's model of segregation and Epstein and Axtell's Sugarscape model. Both models are defined at the intraurban level.
+Simulation has been recognised and increasingly used by geographers to explore various geographical processes and problems within virtual laboratories \citep{Quesneletal2009} \comment{Batty 1978? James Doran 1970's : lire thèse de Seb ;) }. It appears as a very fruitful way to overcome the difficulty of analytic resolution of many spatial models developed in the past, and to explore the possible trajectories of social and ecological systems in space and time. The specificity of geographical models compared with models from other social sciences is usually regarded as the way geographers consider space and spatial interactions, driven by an explicit interest in the way space influences the outcomes of the model. Geographers are indeed concerned about understanding and modelling how space plays a role in social interactions and environmental processes, and whether its action is placed-based or place-neutral. We think simulation can become a very good tool to achieve this, provided that models include relevant spatial description and modelling, behavioural rules that take space into account, and provided model evaluation stresses the sensitivity of output variations to the way space is modelled. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of model's outcomes to initial spatial conditions. To demonstrate the genericity of our approach, we develop two applications from simulation models which are commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996}: Schelling's model of segregation and Epstein and Axtell's Sugarscape model. Both models are defined at the intraurban level.
 
-
-%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Why spatial patterns are expected to impact social simulations}
-
-\paragraph{Because actual cities are not regular grids}
-Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). At initialisation, we then expect agents to be distributed in different patterns, which influence results in the long run \cite{Castellanoetal2009}. A first approach could be to evaluate the effects of the same set of social mechanisms, but modelled in different types of cities, for example monocentric, polycentric and discontinuous.
-
-\paragraph{Because actual agents are not random walkers}
-We expect spatial patterns to influence model outcomes also because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled.
-
-\paragraph{Due to spatio-temporal path dependencies}
-
-A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what Gell-Mann calls \emph{frozen accidents} in any complex system~\cite{gell1995quark}, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. Temporal and cumulative effects have been considered in various geographical subfields and at various geographical scales, including transportation and urban economics, urban geography, and interregional migrations \citep[for e.g.]{White1977,White1978, AllenSanglier1979,Wilson1981,Pumainetal1989,AllenSanglier1981,WeidlichHaag1988,Portugali2000,Wilson2002,Batty2007,AzizAlaouiBertelle2009}. Less studied is the impact of the spatial setting on models dynamics and potential bifurcations.
-
-The example of transportation networks is a good illustration, as their spatial shape and hierarchy is strongly influenced by past investment decisions, technical choices, or political decisions sometimes not rational~(\cite{zembri2010new}). Some aggregated indicators will not take into account positions and trajectories of each agent (such as segregation in the Schelling model) but others, as in the case of spatial patterns of accessibility in a system of cities, fully capture the path-dependency and may therefore be highly dependent of the initial spatial configuration. It is not clear for example what shifted the economical and political capital of France from Lyon to Paris in the early Middle Age, some assumptions being the reconfiguration of trade patterns from South to North of Europe and thus an increased centrality for Paris due to its spatial position: the bifurcation induced by socio-economic and political factors took a deep significance with worldwide repercussions until today when magnified by the spatial configuration. \comment[JR]{quelqu'un sait si d'une part c'est vrai et d'autre part si des references backupent ca ? - je sors ca completement du chapeau pour l'instant mais ça me semble intuitivement raisonnable et une bonne illustration.}[(MLT)L'idée de donner un exemple me semble bonne mais je ne suis pas sûre qu'on l'amène de la bonne manière?]
-
-
-%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Objective}
 
 In this paper, we suggest tackling sensitivity to spatial conditions by generating a variety of density grids to feed into simulation models at initialisation, and exploring the sensitivity of the model outcomes to the variation of meta-parameters (i.e. parameters used to generate initial spatial conditions). The purpose is two-fold: 1/ to test the robustness of simulation results to small variations of meta-parameters within a typical category of space (a monocentric case for example) and 2/ to study the non-trivial effects of typical categories of spatial distribution (monocentric vs. polycentric for example) on the results of a given model.
 
-
 %%%%%%%%%%%%%%%%%%%%%%
-\section{Previous attempts in the literature}
-%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Why spatial patterns are expected to impact social simulations}
 
-%%%%%%%%%%%%%%%%%%%%%%
-\subsection{In general}
+\comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.}
+\paragraph{Because agents are not random walkers}
 
-The effect of the spatial configuration on area-based attributes of human behaviours has been largely discussed in geostatistics, meanly since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984,FotheringhamWong1991}. Recently, \citet{Kwan2012} claims for a careful examination of what she coins the uncertain geographic context problem (UGCoP), that is of the spatial configuration of geographical units even if the size and delineation of the area are the same. On the contrary, the scarcity of these considerations in the geographic simulation model literature questions the generalisation of their results, as it has for instance been showed in the case of LUTI models \citep{Thomasetal2017}, of diffusion processes using ABM \citep{LeTexierCaruso2017}. 
+We expect spatial patterns to influence model outcomes also because the agents' rule of action itself might depend on the spatial structure of the environment. Indeed, mechanisms of surrounding sensing will be impacted by different distributions of density. For example, agents tend to create buffer zones if they are allowed network-based rather than isotropic movements (\cite{Banos2012}), while the vision / sensing mechanism is sensitive to the scale of modelled environments (\cite{LauriJaggi2003, FossettDietrich2009}). Finally, households can have different preferences with respect to the built-environment (\cite{SpielmanHarrison2014}), thus creating a sensitivity to the initial form of the city modelled. \comment[MLT]{Du coup, je mettrais ce paragraphe à la suite du suivant.} \comment[FL]{je suis d'accord}
 
-%%%%%%%%%%%%%%%%%%%%%%
-\subsection{For Schelling model in particular}
+\paragraph{Because the evolution of cities is path dependent}
 
-Recent attempts of running Schelling-like models beyond the chessboard grid have proved that migration decisions are not only dependent of what positions agents occupy relative to each other, but also of where they occupy these positions. \citet{FlacheHegselmann2001} show that chances for random emergence of a stable cluster of similar agents are highest in a rectangular grid and lowest in a hexagonal grid and that an irregular (Voronoi-diagram) city lattice structure favours migration stabilisation around decentralised clusters of similar agents. \citet{StaufferSolomon2007} introduce asymetric interactions and empty residences on a large and regular lattice. They reveal conjoint and non-linear effects on the vacancy rates and tolerance levels on segregation patterns. \citet{Singhetal2009} show that the segregation patterns obtained by Schelling for certain tolerance values are strictly a small city phenomenon (8x8 city-lattice) and do not work for a larger spatial lattice (100x100), where segregation appears only for certain combinaisons of tolerance threshold and vacancy density values. \citet{Gauvinetal2010} run Schelling's segregation process in an open city-lattice to study how the variations in tolerance levels, vacancy rates and city attractiveness may create lines of vacancy lots between clusters of agents. They conclude on the functional role of vacancies, which allow weakly tolerant agents to live and be satisfied in a city environment they nevertheless perceive as hostile. 
-\citet{Banos2012} compares the behaviour of Schelling segregation model on city lattices formalized as either grid, random, scale-free and Sierpinski networks and concludes that the presence of cliques in graph-based urban structures favor segregationist behaviours. Interestingly, \citet{HatnaBenenson2012} show that their model replications run on a 50x50 torus with 2\% of empty cells were not sensitive to the initial patterns (random and fully segregated distribution of agents). In this paper, we build on the contributions of these previous studies and go further by systematically measuring the impact of the city lattice on Schelling model behaviour so far only assessed through a small set of illustrative spatial structures. 
+The urban system consists of a large number of social agents that interact with each other at a microscopic level in a system-time that evolve irreversibly creating temporal and cumulative effects \citep{AllenSanglier1981,Portugali2000,Wilson1981,Wilson2002,Wu2002,Batty2007,AzizAlaouiBertelle2009} \comment[MLT]{Ca fait très name dropping mais je voulais souligner que l'on connaissait la biblio hors Denise hihi.}. In spatially explicit simulation models, the non-linearity of local interactions is therefore very likely to be (partially) driven by the initial spatial setting, making it difficult to interprete the resulting global structures. A crucial aspect of most spatio-temporal complex systems is their non-ergodicity~(\cite{pumain2012urban}) (the property that cross-sectional samples in space are not equivalent to samples in time to compute statistics such as averages), what witnesses generally strong spatio-temporal path-dependencies in their trajectories. Similar to what Gell-Mann calls \emph{frozen accidents} in any complex system~\cite{gell1995quark}, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. 
 
+\paragraph{Because actual cities are not regular grids}
+Although this may seem obvious, cities are not regular grids of isotropic densities. Modelling may be about abstracting features to highlight processes in a way which is simpler than reality. However, the uniform grid which represents space in most simulation models is potentially not enough to represent urban processes because density and accessibility have environmental, economic and social consequences. An intermediate and more meaningful way of abstracting space might thus be to consider, not the peculiarities of every city, but their broad density structures. In Europe for example, one can find broad types of density distributions (\cite{LeNechet2015}). At initialisation, we then expect agents to be distributed in different patterns, which influence results in the long run \cite{Castellanoetal2009}. A first approach could be to evaluate the effects of the same set of social mechanisms, but modelled in different types of cities, for example monocentric, polycentric and discontinuous.
 
-%%%%%%%%%%%%%%%%%%%%%%
-\subsection{And for SugarScape?}
+\paragraph{Considerations of urban form in simulation models}
 
+The effect of the spatial configuration on area-based attributes of human behaviours has been largely discussed in geostatistics, meanly since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984,FotheringhamWong1991}. Recently, \citet{Kwan2012} claims for a careful examination of what she coins the uncertain geographic context problem (UGCoP), that is of the spatial configuration of geographical units even if the size and delineation of the area are the same. On the contrary, the scarcity of these considerations in the geographic simulation model literature questions the generalisation of their results, as it has for instance been showed in the case of LUTI models \citep{Thomasetal2017} and of diffusion processes using ABM \citep{LeTexierCaruso2017}. 
+\comment[FL]{Je pense que cette partie est vraiment utile, et devrait être étoffée, en procédant peut être à une typologie plus systématique des "initial condition" qui nous intéressent. Il y a déjà une différence entre l'hétérogénéité de l'espace (densités réparties mono ou poly, etc) et les différentes façons de représenter l'espace (grilles carrées, hexagones). Par ailleurs aussi des discussions sur l'incertitude de l'information (est ce que par exemple les emplois downscalés au carreau INSEE par Pivano 2016 c'est vraiment fiable ou très ?) et la précision de la grille}
+
+%The example of transportation networks is a good illustration, as their spatial shape and hierarchy is strongly influenced by past investment decisions, technical choices, or political decisions sometimes not rational~(\cite{zembri2010new}). Some aggregated indicators will not take into account positions and trajectories of each agent (such as segregation in the Schelling model) but others, as in the case of spatial patterns of accessibility in a system of cities, fully capture the path-dependency and may therefore be highly dependent of the initial spatial configuration. It is not clear for example what shifted the economical and political capital of France from Lyon to Paris in the early Middle Age, some assumptions being the reconfiguration of trade patterns from South to North of Europe and thus an increased centrality for Paris due to its spatial position: the bifurcation induced by socio-economic and political factors took a deep significance with worldwide repercussions until today when magnified by the spatial configuration. \comment[JR]{quelqu'un sait si d'une part c'est vrai et d'autre part si des references backupent ca ? - je sors ca completement du chapeau pour l'instant mais ça me semble intuitivement raisonnable et une bonne illustration.}[(MLT)L'idée de donner un exemple me semble bonne mais je ne suis pas sûre qu'on l'amène de la bonne manière? --> en fait je crois que l'on a pas besoin de ce paragraphe illustratif, ça complique le papier. Qu'en pensez-vous?]  [(FL) : illustrer par les transports c'est une bonne idée mais pas besoin de parler du moyen âge! la faible croissance de Dijon depuis 30 ans peut être une illustration tarte à la crême. mais pas sûr effectivement qu'on ait absolument besoin d'illustration, en tous cas il n'y en a pas dans le § d'avant (bientôt après ;o)]
 
 
 %%%%%%%%%%%%%%%%%%%%%%
 \section{Methods}
 %%%%%%%%%%%%%%%%%%%%%%
 
-
-In this section, we detail the method developed to analyse the sensitivity of simulation models to initial spatial conditions. The general method workflow is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch in figure \ref{fig:method}, which consists of running a model $\mu$ with various values of its parameters and relating these variations of values to the variations in the simulation results, we here introduce a spatial generator (lower branch in figure \ref{fig:method}), which itself is determined by parameters and produces sets of spatial initial conditions. Initial spatial conditions are clustered to represent types of spaces ex-ante (for example: moonocentric or polycentric density grids), and the sensitivity analysis of the model is now run against $\mu$ parameters as well as spatial parameters or spatial types. It allows the sensitivity analysis to produce qualitative conclusions regarding the influence of spatial distribution on the outputs of simulation models, alongside the classic variation of parameter values.
-
+In this section, we detail the method developed to analyse the sensitivity of simulation models to initial spatial conditions. The general method workflow is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch in figure \ref{fig:method}, which consists of running a model $\mu$ with various values of its parameters and relating these variations of values to the variations in the simulation results, we here introduce a spatial generator (lower branch in figure \ref{fig:method}), which itself is determined by input parameters and produces sets of spatial initial conditions. Initial spatial conditions are clustered to represent types of spaces ex-ante (for example: moonocentric or polycentric density grids), and the sensitivity analysis of the model is now run against $\mu$ parameters as well as spatial parameters or spatial types. It allows the sensitivity analysis to produce qualitative conclusions regarding the influence of spatial distribution on the outputs of simulation models, alongside the classic variation of parameter values.
 
 %%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[htbp] \begin{center} 
 \resizebox{0.9\textwidth}{!}{ 
 	\includegraphics{figures/SchemaMeta_1.png}
-} \caption{General workflow of our method\comment[MLT]{If we want to keep this figure, I propose that we link it more clearly to the following subsections, by numbering the different parts of the figure? By graphically showing on which parts of the figure the different subsections focus? Besides, we need to change it as we know want to go further than analysing the outputs qualitatively.}} \label{fig:method} \end{center} \end{figure*} %
+} \caption{General workflow of our method} \label{fig:method} \end{center} \end{figure*} %
 %%%%%%%%%%%%%%%%%%%%%%
-
-
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Constructing a spatial generator}
 
-Our spatial generator applies an urban morphogenesis model (\cite{Batty2007}), which has been generalised, explored and calibrated (\cite{Raimbault2014}). In a nutshell, grids are generated through an iterative process which adds a quantity $N$ (population) at each time step, allocating it through preferential attachment characterised by its strength of attraction $\alpha$. This first growth process is then smoothed $n$ times using a diffusion process of strength $\beta$. Grids are thus generated from the combination of the values of these four meta-parameters $\alpha$, $\beta$, $n$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment of 100,000 units (cf. figure \ref{fig:spatialGen}).
-
+Our spatial generator applies an urban morphogenesis model (\cite{Batty2007}), which has been generalised, explored and calibrated (\cite{Raimbault2014}). \comment[FL]{il faut que les sens de tous les paramètres soient explicités avec les équations ?} In a nutshell, grids are generated through an iterative process which adds a quantity $N$ (population) at each time step, allocating it through preferential attachment characterised by its strength of attraction $\alpha$. This first growth process is then smoothed $n$ times using a diffusion process of strength $\beta$. Grids are thus generated from the combination of the values of these four meta-parameters $\alpha$, $\beta$, $n$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment of 100,000 units (cf. figure \ref{fig:spatialGen}).
+\comment{A detailler en incluant les equations de morphogenese}
 
 %%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[htbp] \begin{center} 
 \resizebox{0.9\textwidth}{!}{ 
 	\includegraphics{figures/spatialGen.png}
-} \caption{Four examples of grids produced by the spatial generator} \label{fig:spatialGen} \end{center} \end{figure*} %
+} \caption{Four examples of grids produced by the spatial generator. The lighter the red, the denser the area.} \label{fig:spatialGen} \end{center} \end{figure*} %
 %%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -141,25 +118,20 @@ In order to generate density grids which correspond to empirical density distrib
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Comparing Phase Diagrams}
 
-In order to test for the influence of spatial initial conditions, we need a systematic method to compare phase diagrams. Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic. A solution is to use systematic quantitative procedures. Several potential methods could be used: for example in the case of the Schelling model, an anisotropic spatial segregation index (giving the number of clusters found and in which region in the parameter spaces they are roughly situated) would differentiate strong \emph{meta phase transitions} (phase transitions in the space of meta parameters). The use of metrics comparing spatial distributions, such as the Earth Movers Distance which is used for example in Computer Vision to compare probability distributions~\cite{rubner2000earth}, or the comparison of aggregated transition matrices of the dynamic associated to the potential described by each distribution, would also be potential tools. Map comparison methods, popular in environmental sciences, provide numeral tools to compare two dimensional fields~\cite{visser2006map}. To compare a spatial field evolving in time, elaborated methods such as Empirical Orthogonal Functions that isolates temporal from spatial variations, would be applicable in our case by taking time as a parameter dimension, but these have been shown to perform similarly to direct visual inspection when averaged over a crowdsourcing~\cite{10.1371/journal.pone.0178165}. To keep it simple and as such methodological considerations are auxiliary to the main purpose of this paper, we propose an intuitive measure corresponding to the share of between-diagrams variability relative to their internal variability. More formally, the distance is given by
+In order to test for the influence of spatial initial conditions, we need a systematic method to compare phase diagrams. Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic. A solution is to use systematic quantitative procedures. Several potential methods could be used \comment[MLT]{Ici je me demande si l'on ne devrait pas simplement dire que l'on a pas trouvé de méthodes de comparaisons systématiques de diagrammes de phase dans la littérature SMA ou geographic modelling, et que du coup on propose de comparer la variance intra à la variance inter-grille selon la formule ... Et je garderais la précision sur les autres méthodes que l'on aurait pu choisir pour la section de discussion}: for example in the case of the Schelling model, an anisotropic spatial segregation index (giving the number of clusters found and in which region in the parameter spaces they are roughly situated) would differentiate strong \emph{meta phase transitions} (phase transitions in the space of meta parameters). The use of metrics comparing spatial distributions, such as the Earth Movers Distance which is used for example in Computer Vision to compare probability distributions~\cite{rubner2000earth}, or the comparison of aggregated transition matrices of the dynamic associated to the potential described by each distribution, would also be potential tools. Map comparison methods, popular in environmental sciences \comment[MLT]{Et pas en géo? Qu'est-ce que ces méthodes ont de particulier?}, provide numeral tools to compare two dimensional fields~\cite{visser2006map}. To compare a spatial field evolving in time, elaborated methods such as Empirical Orthogonal Functions that isolates temporal from spatial variations, would be applicable in our case by taking time as a parameter dimension, but these have been shown to perform similarly to direct visual inspection when averaged over a crowdsourcing~\cite{10.1371/journal.pone.0178165}. To keep it simple and as such methodological considerations are auxiliary to the main purpose of this paper, we propose an intuitive measure corresponding to the share of between-diagrams variability relative to their internal variability. More formally, the distance is given by
 
 \begin{equation}\label{eq:phase-distance}
 d_r\left(\alpha_1,\alpha_2\right) = 2 \cdot \frac{d(f_{\vec{\alpha_1}},f_{\vec{\alpha_2}})^2}{Var\left[f_{\vec{\alpha_1}}\right] + Var\left[f_{\vec{\alpha_2}}\right]}
 \end{equation}
 
-where $\alpha \mapsto \left[\vec{x} \mapsto f_{\vec{\alpha}}\left(\vec{x}\right)\right]$ is the operator giving phase diagrams with $\vec{x}$ parameters and $\vec{\alpha}$ meta-parameters, and $d$ is a distance between probability distributions that can be taken for example as basic L2 distance or the Earth's Mover Distance. For each values $\vec{\alpha_i}$, the phase diagram is seen as a random spatial field, facilitating the definition of variances and distance.
-
+where $\alpha \mapsto \left[\vec{x} \mapsto f_{\vec{\alpha}}\left(\vec{x}\right)\right]$ is the operator giving phase diagrams with $\vec{x}$ parameters and $\vec{\alpha}$ meta-parameters, and $d$ is a distance between probability distributions that can be taken for example as basic L2 distance \comment[MLT]{Euclidean? Je crois qu'il faut adapter le vocabulaire utilisé aux lecteurs d'EPB, qu'en pensez-vous?} or the Earth's Mover Distance \comment[MLT]{Si l'on mentionne les deux, ne va-t-on pas nous demander de tester l'effet du choix de l'une ou de l'autre sur nos résultats?}. For each values $\vec{\alpha_i}$, the phase diagram is seen as a random spatial field, facilitating the definition of variances and distance.
+\comment[FL]{je pense que c'est un peu compliqué effectivement cette partie.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Model Exploration Workflows as an meta-sensitivity analysis method}
 
-
-
-The last methodological point which we need to emphasis is the relation between the workflow we introduce and model exploration workflows. The ideas of multi-modeling and extensive model exploration are nothing from new as Openshaw already advocated for ``model-crunching'' in~\cite{openshaw1983data}, but their effective use only begins to emerge thanks to the apparition of new methods and tools together with an explosion of computation capabilities: \cite{cottineau2016back} claims for a renewed approach on multi-modeling. Coupling models as we do answers to similar questions. In that stream of research, the model exploration platform OpenMole~\cite{reuillon2013openmole} allows to embed any model as a blackbox, write modulable exploration workflow using advanced methodologies such as genetic algorithms and distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, the workflow tool is a powerful way to embed both the sensitivity analysis and the meta-sensitivity analysis, and allow to couple any generator with any model in a straightforward way as soon as the model can take its spatial configuration as input or from an input file.
-
-
-
+The last methodological point which we need to emphasis is the relation between the workflow we introduce and model exploration workflows. The ideas of multi-modeling and extensive model exploration are nothing from new as Openshaw already advocated for ``model-crunching'' in~\cite{openshaw1983data}, but their effective use only begins to emerge thanks to the apparition of new methods and tools together with an explosion of computation capabilities. The model exploration platform OpenMole~\cite{reuillon2013openmole} allows to embed any model as a blackbox, write modulable exploration workflow using advanced methodologies such as genetic algorithms and distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, the workflow tool is a powerful way to embed both the sensitivity analysis and the meta-sensitivity analysis, and allow to couple any generator with any model in a straightforward way as soon as the model can take its spatial configuration as input or from an input file. \comment[MLT]{Je me suis permis de bouger la partie sur le multi-modeling en fin de paragraphe, mais ai essayé d'en garder l'esprit tel quel!} In this paper, we use the OpenMole platform for spatial environment and model coupling, placing ourselves in the renewed framework of multi-modeling claimed by \cite{cottineau2016back}.
 
 %%%%%%%%%%%%%%%%%%%%%%
 \section{Application cases}
@@ -171,7 +143,9 @@ We use our set of initial density grids in two spatial simulation models: Schell
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Schelling's model of residential segregation}
 
-Schelling's model consists in a abstract urban housing market where agents of different nature sense their environment, evaluate their satisfaction in terms of neighbourhood composition, and relocate if unsatisfied. It has been shown by \cite{Schelling1969} that even tolerant agents tended to produce segregated patterns because of the complexity of their local interactions. The main parameters of this model are the tolerance level (\% of agents similar to {\it ego}), the scope of sensing and the percentage of vacant spaces in the housing market. In addition, we are interested in testing the impact of the spatial distribution of housing capacity in this project, using the generated grids.
+Schelling's model consists in a abstract urban housing market where agents of different nature sense their environment, evaluate their satisfaction in terms of neighbourhood composition, and relocate if unsatisfied. It has been shown by \cite{Schelling1969} that even tolerant agents tended to produce segregated patterns because of the complexity of their local interactions. The main parameters of this model are the tolerance level (\% of agents similar to {\it ego}), the scope of sensing and the percentage of vacant spaces in the housing market. In addition, we are interested in testing the impact of the spatial distribution of housing capacity in this project, using the generated grids. \comment[MLT]{Dans le paragraphe sur Sugarscape on parle du diagramme de phase que l'on étudie en sortie, pas ici. On harmonise dans quel sens?}
+
+%Recent attempts of running Schelling-like models beyond the chessboard grid have proved that migration decisions are not only dependent of what positions agents occupy relative to each other, but also of where they occupy these positions. \citet{FlacheHegselmann2001} show that chances for random emergence of a stable cluster of similar agents are highest in a rectangular grid and lowest in a hexagonal grid and that an irregular (Voronoi-diagram) city lattice structure favours migration stabilisation around decentralised clusters of similar agents. \citet{StaufferSolomon2007} introduce asymetric interactions and empty residences on a large and regular lattice. They reveal conjoint and non-linear effects on the vacancy rates and tolerance levels on segregation patterns. \citet{Singhetal2009} show that the segregation patterns obtained by Schelling for certain tolerance values are strictly a small city phenomenon (8x8 city-lattice) and do not work for a larger spatial lattice (100x100), where segregation appears only for certain combinaisons of tolerance threshold and vacancy density values. \citet{Gauvinetal2010} run Schelling's segregation process in an open city-lattice to study how the variations in tolerance levels, vacancy rates and city attractiveness may create lines of vacancy lots between clusters of agents. They conclude on the functional role of vacancies, which allow weakly tolerant agents to live and be satisfied in a city environment they nevertheless perceive as hostile. \citet{Banos2012} compares the behaviour of Schelling segregation model on city lattices formalized as either grid, random, scale-free and Sierpinski networks and concludes that the presence of cliques in graph-based urban structures favor segregationist behaviours. Interestingly, \citet{HatnaBenenson2012} show that their model replications run on a 50x50 torus with 2\% of empty cells were not sensitive to the initial patterns (random and fully segregated distribution of agents). In this paper, we build on the contributions of these previous studies and go further by systematically measuring the impact of the city lattice on Schelling model behaviour so far only assessed through a small set of illustrative spatial structures. \comment[MLT]{Le remettre en moins détaillé dans l'intro en lien avec les catégories de prise en compte de la forme de la grille.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%
@@ -184,6 +158,7 @@ Sugarscape is a model of resource extraction which simulates the unequal distrib
 \section{Results}
 %%%%%%%%%%%%%%%%%%%%%%
 
+\comment[FL]{il faudrait peut être davantage renforcer l'analyse a propos de figure 1 de si c'est plutôt les mu parameters ou les spatial parameters qui ont une grosse influence sur les résultats.}
 
 
 
@@ -236,7 +211,8 @@ We obtain a very strong sensitivity to initial conditions, as the distribution o
 
 %%%%%%%%%%%%%
 \begin{figure}
-\centering\includegraphics[width=0.24\textwidth]{figures/phasediagram_id27_maxSugar110}
+\centering
+\includegraphics[width=0.24\textwidth]{figures/phasediagram_id27_maxSugar110}
 \includegraphics[width=0.24\textwidth]{figures/phasediagram_id0_maxSugar110}
 \caption{\textbf{Examples of phase diagrams.} We show two dimensional phase diagrams on $(P,s_-)$, both at fixed $s_+ = 110$. (Left) Green frame, obtained with $\alpha = 0.79$, $n=2$, $\beta = 0.14$, $N=157$; (Right) Blue frame, obtained with $\alpha = 2.56$, $n=3$, $\beta = 0.13$, $N=128$.}
 \label{fig:sugarscape-phasediagrams}
@@ -245,15 +221,11 @@ We obtain a very strong sensitivity to initial conditions, as the distribution o
 
 We now check the sensitivity in terms of qualitative behavior of phase diagrams. We show the phase diagrams for two very opposite morphologies in term of sprawling, but controlling for aggregation with the same $PC2$ value. These correspond to the green and blue frames in Fig.~\ref{fig:sugarscape-distance}. The behaviors are rather stable for varying $s_+$, what means that the poorest agents have a determinant role in trajectories. The two examples have not only a very distant baseline inequality (the ceil of the first 0.35 is roughly the floor of the second 0.3), but their qualitative behavior is also radically opposite: the sprawled configuration gives inequalities decreasing as population decreases and decreasing as minimal wealth increases, whereas the concentrated one gives inequalities strongly increasing as population decreases and also decreasing with minimal weights but significantly only for large population values. The process is thus completely inverted, what would have significant impacts if one tried to schematize policies from this model. This second example confirms thus the importance of sensitivity of simulation models to the initial spatial conditions.
 
-
-
-
-
 %%%%%%%%%%%%%%%%%%%%%%
 \section{Discussion}
 %%%%%%%%%%%%%%%%%%%%%%
 
-
+\comment{NetLogo qui influence la formalisation de l'espace dans les modèles alors que formalisation de ce dernier peut être plus poussée dans la description du modèle original.}
 
 % \hfill \break
 % \itshape{This is a sub, subheading}\normalfont
